<resources>
    <string name="app_name">AN07</string>
    <string name="dz1">Hw1: Picture load</string>
    <string name="dz2">Hw2: Layout&amp;animation</string>
    <string name="dz3">Hw3: ViewModel</string>
    <string name="show_button">Find&amp;Show</string>
    <string name="please_enter_picture_url">Please enter picture URL</string>
    <string name="image_box">Image Box</string>
    <string name="picture_url">Picture URL:</string>
    <string name="button_flags">Flags</string>
    <string name="button_animation">animation</string>
    <string name="text_austria">Austria</string>
    <string name="text_latvia">Latvia</string>
    <string name="text_armenia">Armenia</string>
    <string name="text_belgium">Belgium</string>
    <string name="text_spain">Spain</string>
    <string name="text_denmark">Denmark</string>
    <string name="text_name1">Гомельская область</string>
    <string name="text_name2">Брестская область</string>
    <string name="text_name3">Минская область</string>
    <string name="dz4">Hw4: Fragments</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="white">White</string>
    <string name="dz5">Hw5: Material design</string>
    <string name="login">Login</string>
    <string name="password_text">Password</string>
    <string name="password_mim">Password must be at least 8 characters</string>
    <string name="login_empty">Login cannot be empty</string>
    <string name="welcome_string">"Welcome, "</string>
    <string name="dz6">Hw6: Anim&amp;Navi</string>
    <string name="show_card">show card</string>
    <string name="dz7">hw7: database</string>
    <string name="find_product">Find product</string>
    <string name="delete">delete</string>
    <string name="duplicate">duplicate</string>
    <string name="add">add</string>
    <string name="name">Name</string>
    <string name="image_url">Image URL</string>
    <string name="price">Price</string>
    <string name="dz8">hw8: retrofit</string>
    <string name="find_crypto">Find crypto</string>
    <string name="search">Find crypto</string>
    <string name="content_description_search">search crypto</string>
    <string name="refresh">Reload</string>
    <string name="content_description_refresh">Refresh</string>
    <string name="sort_direction">Change sort direction</string>
    <string name="sort_by_marketcap">Sort by market cap</string>
    <string name="show_favorites">Show favorites</string>
    <string name="show_fav">Show only favorites</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_price">Sort by price</string>
    <string name="start">start</string>
</resources>