<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/hw1_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/dz1"
        android:textSize="@dimen/button_text_size" />

    <Button
        android:id="@+id/hw2_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/dz2"
        android:textSize="24sp" />

    <Button
        android:id="@+id/hw3_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/dz3"
        android:textSize="24sp" />

    <Button
        android:id="@+id/hw4_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/dz4"
        android:textSize="24sp" />

    <Button
        android:id="@+id/hw5_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/dz5"
        android:textSize="24sp" />

    <Button
        android:id="@+id/hw6_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/dz6"
        android:textSize="24sp" />

    <Button
        android:id="@+id/hw7_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/dz7"
        android:textSize="24sp" />

    <Button
        android:id="@+id/hw8_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/dz8"
        android:textSize="24sp" />

    <Button
        android:id="@+id/hw9_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:text="hw9:services"
        android:textSize="24sp" />

    <Button
        android:id="@+id/hw11_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:text="hw11:RxJava"
        android:textSize="24sp" />
</LinearLayout>