<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_name1"
        android:background="@color/teal_200"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin"
        android:layout_weight="1" >
    </View>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_name2"
        android:background="@color/teal_200"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin"
        android:layout_weight="1" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_name3"
        android:background="@color/teal_200"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin"
        android:layout_weight="1" />

</LinearLayout>