<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4CAF50"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                layout="@layout/flag_austria"
                android:layout_width="@dimen/flag_width"
                android:layout_height="@dimen/flag_height"
                android:layout_gravity="center"
                android:layout_margin="@dimen/double_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/double_margin"
                android:text="@string/text_austria"
                android:textSize="@dimen/text_size_big" />

            <include
                layout="@layout/flag_denmark"
                android:layout_width="@dimen/flag_width"
                android:layout_height="@dimen/flag_height"
                android:layout_gravity="center"
                android:layout_margin="@dimen/double_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/double_margin"
                android:text="@string/text_denmark"
                android:textSize="@dimen/text_size_big" />

            <include
                layout="@layout/flag_latvia"
                android:layout_width="@dimen/flag_width"
                android:layout_height="@dimen/flag_height"
                android:layout_gravity="center"
                android:layout_margin="@dimen/double_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/double_margin"
                android:text="@string/text_latvia"
                android:textSize="@dimen/text_size_big" />

            <include
                layout="@layout/flag_armenia"
                android:layout_width="@dimen/flag_width"
                android:layout_height="@dimen/flag_height"
                android:layout_gravity="center"
                android:layout_margin="@dimen/double_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/double_margin"
                android:text="@string/text_armenia"
                android:textSize="@dimen/text_size_big" />

            <include
                layout="@layout/flag_belgium"
                android:layout_width="@dimen/flag_width"
                android:layout_height="@dimen/flag_height"
                android:layout_gravity="center"
                android:layout_margin="@dimen/double_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/double_margin"
                android:text="@string/text_belgium"
                android:textSize="@dimen/text_size_big" />

            <include
                layout="@layout/flag_spain"
                android:layout_width="@dimen/flag_width"
                android:layout_height="@dimen/flag_height"
                android:layout_gravity="center"
                android:layout_margin="@dimen/double_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/double_margin"
                android:text="@string/text_spain"
                android:textSize="@dimen/text_size_big" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>